@@ -22,18 +22,16 @@ import com.palantir.gradle.dist.GradleIntegrationSpec
 import com.palantir.gradle.dist.SlsManifest
 import com.palantir.gradle.dist.Versions
 import com.palantir.gradle.dist.service.tasks.LaunchConfigTask
-import org.gradle.testkit.runner.BuildResult
-
+import java.util.function.Consumer
 import java.util.jar.Attributes
 import java.util.jar.JarOutputStream
 import java.util.jar.Manifest
-import spock.lang.Unroll
-
 import java.util.zip.ZipFile
+import java.util.zip.ZipOutputStream
+import org.gradle.testkit.runner.BuildResult
 import org.gradle.testkit.runner.TaskOutcome
 import org.junit.Assert
-
-import java.util.zip.ZipOutputStream
+import spock.lang.Unroll
 
 class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
     private static final OBJECT_MAPPER = new ObjectMapper(new YAMLFactory())
@@ -1197,13 +1195,9 @@ class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
     }
 
     def 'applies opens based on classpath manifests'() {
-        Manifest manifest = new Manifest()
-        manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0")
-        manifest.getMainAttributes().putValue('Add-Opens', 'jdk.compiler/com.sun.tools.javac.file')
-        File testJar = new File(getProjectDir(),"test.jar");
-        testJar.withOutputStream { fos ->
-            new JarOutputStream(fos, manifest).close()
-        }
+        createEmptyJar("test.jar", { manifest ->
+            manifest.getMainAttributes().putValue('Add-Opens', 'jdk.compiler/com.sun.tools.javac.file')
+        })
         createUntarBuildFile(buildFile)
         buildFile << """
             dependencies {
@@ -1233,6 +1227,86 @@ class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
         // Verify args are set in the correct order
         int compilerPairIndex = actualOpts.indexOf("jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
         actualOpts.get(compilerPairIndex - 1) == "--add-opens"
+    }
+
+    def 'applies --enable-preview based on Baseline-Enable-Preview manifest attribute found in classpath jars'() {
+        createEmptyJar("test.jar", { manifest ->
+            manifest.getMainAttributes().putValue('Baseline-Enable-Preview', '14')
+        })
+        createUntarBuildFile(buildFile)
+        buildFile << """
+            dependencies {
+                implementation files("test.jar")
+            }
+            tasks.jar.archiveBaseName = "internal"
+            distribution {
+                javaVersion 14
+            }""".stripIndent()
+        file('src/main/java/test/Test.java') << "package test;\npublic class Test {}"
+
+        when:
+        runTasks(':build', ':distTar', ':untar')
+
+        then:
+        def actualOpts = OBJECT_MAPPER.readValue(
+                file('dist/service-name-0.0.1/service/bin/launcher-static.yml'),
+                LaunchConfigTask.LaunchConfig)
+                .jvmOpts()
+
+        actualOpts.contains("--enable-preview")
+    }
+
+    def 'Gives clear errors if Baseline-Enable-Preview manifest attributes conflict'() {
+        createEmptyJar("test.jar", { manifest ->
+            manifest.getMainAttributes().putValue('Baseline-Enable-Preview', '17')
+        })
+        createEmptyJar("other.jar", { manifest ->
+            manifest.getMainAttributes().putValue('Baseline-Enable-Preview', '19')
+        })
+        createUntarBuildFile(buildFile)
+        buildFile << """
+            dependencies {
+                implementation files("test.jar")
+                implementation files("other.jar")
+            }
+            tasks.jar.archiveBaseName = "internal"
+            distribution {
+                javaVersion 17
+            }""".stripIndent()
+        file('src/main/java/test/Test.java') << "package test;\npublic class Test {}"
+
+        when:
+        BuildResult result = runTasksAndFail(':createLaunchConfig')
+
+        then:
+        result.output.contains("Unable to add '--enable-preview' because classpath jars have embedded " +
+                "Baseline-Enable-Preview attribute with different versions compared to the runtime version 14:")
+        result.output.contains("/test.jar=17")
+        result.output.contains("/other.jar=19")
+    }
+
+    def 'Gives clear errors if Baseline-Enable-Preview version doesn\'t match runtime java version'() {
+        createEmptyJar("test.jar", { manifest ->
+            manifest.getMainAttributes().putValue('Baseline-Enable-Preview', '19')
+        })
+        createUntarBuildFile(buildFile)
+        buildFile << """
+            dependencies {
+                implementation files("test.jar")
+            }
+            tasks.jar.archiveBaseName = "internal"
+            distribution {
+                javaVersion 17
+            }""".stripIndent()
+        file('src/main/java/test/Test.java') << "package test;\npublic class Test {}"
+
+        when:
+        BuildResult result = runTasksAndFail(':createLaunchConfig')
+
+        then:
+        result.output.contains("Unable to add '--enable-preview' because classpath jars have embedded " +
+                "Baseline-Enable-Preview attribute with different versions compared to the runtime version 14:")
+        result.output.contains("/test.jar=19")
     }
 
     def 'applies opens based on classpath manifests for manifest classpaths'() {
@@ -1340,6 +1414,17 @@ class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
 
         fileExists("dist/service-name-0.0.1/service/bin/go-java-launcher-${goJavaLauncherVersion}/service/bin")
         fileExists("dist/service-name-0.0.1/service/bin/go-init-${goJavaLauncherVersion}/service/bin")
+    }
+
+    private void createEmptyJar(String filename, Consumer<Manifest> manifestInitializer) {
+        File testJar = new File(getProjectDir(), filename);
+
+        Manifest manifest = new Manifest()
+        manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0")
+        manifestInitializer.accept(manifest);
+        testJar.withOutputStream {fos ->
+            new JarOutputStream(fos, manifest).close()
+        }
     }
 
     private static createUntarBuildFile(File buildFile) {
